# docs2db-api

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml
demos/llama-stack/: agent_tool_calling_client.py  client.py  setup_fresh_llama_stack.py
src/docs2db_api/: __init__.py  config.py  database.py  db_lifecycle.py  docs2db_api.py  embeddings.py  reranker.py
src/docs2db_api/rag/: __init__.py  engine.py  llama_stack.py
tests/: __init__.py  conftest.py  test_engine.py  test_rag_config.py
