[project]
name = "docs2db-api"
version = "0.3.1"
description = "Query Docs2DB RAG databases with hybrid search and reranking"
readme = "README.md"
authors = [{ name = "Ellis Low", email = "elow@redhat.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"
keywords = [
    "rag",
    "retrieval",
    "embeddings",
    "semantic-search",
    "vector-search",
    "hybrid-search",
    "pgvector",
    "postgresql",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cachetools>=7.1.3",
    "docling>=2.94.0",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "structlog>=25.5.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
    "xxhash>=3.7.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
]

[project.scripts]
docs2db-api = "docs2db_api.docs2db_api:app"

[project.urls]
Homepage = "https://github.com/rhel-lightspeed/docs2db-api"
Documentation = "https://github.com/rhel-lightspeed/docs2db-api#readme"
Repository = "https://github.com/rhel-lightspeed/docs2db-api"
Issues = "https://github.com/rhel-lightspeed/docs2db-api/issues"
Changelog = "https://github.com/rhel-lightspeed/docs2db-api/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.15,<0.11.16"]
build-backend = "uv_build"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.57.0",
    "greenlet>=3.5.1",
    "ipython>=9.13.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "pytest-randomly>=4.1.0",
    "pytest-sugar>=1.1.1",
    "python-gitlab>=8.3.0",
    "ruff>=0.15.13",
    "tox>=4.54.0",
    "types-cachetools>=7.0.0.20260518",
    "types-tqdm>=4.67.3.20260518",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=docs2db_api",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--color=yes",
]
# Having problems with tests? Uncomment the following line to see more output.
# log_cli = false
# log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
markers = [
    "no_ci: marks tests that should not run in CI (require external services, podman, etc.)"
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "S",      # bandit (security)
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TID252", # flake8-tidy-imports (relative imports)
    "RUF100", # flag unnecessary noqa comments
]
ignore = [
    "B9",     # flake8-bugbear opinionated rules (B901-B911)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104"]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

